# QOpenAI

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
QOpenAI/: CMakeLists.txt  QOpenAI_global.h  qopenai.cpp  qopenai.h
Test/: CMakeLists.txt
Test/TestApp/: CMakeLists.txt  audio.cpp  chat.cpp  image.cpp  main.cpp  model.cpp
Test/TestTool/: CMakeLists.txt  testtool.cpp  testtool.h
